--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
         const [includeOkage, setIncludeOkage] = React.useState(true)
         const [includeClosed, setIncludeClosed] = React.useState(true)
         const [pref, setPref] = React.useState(window.localStorage.getItem('komedas_pref') || "東京都")
-        const [hidePast, setHidePast] = React.useState(true)
+        const [hidePast, setHidePast] = React.useState(false)
 
         const onChangePref = e => {
             setPref(e.target.value)
@@ -153,7 +153,7 @@
                             <div className="controls">
                                 <label htmlFor="incOkage" className="mx-2"><input checked={includeOkage} className="" id="incOkage" type="checkbox" onChange={onChangeIncOkage} />おかげ庵</label>
                                 <label htmlFor="incClosed" className="mx-2"><input checked={includeClosed} className="" id="incClosed" type="checkbox" onChange={onChangeIncClosed} />本日休業を含む</label>
-                                <label htmlFor="hidePast" className="mx-2"><input checked={hidePast} className="" id="hidePast" type="checkbox" onChange={onChangeHidePast} />過去の営業時間を隠す</label>
+                                <label htmlFor="hidePast" className="mx-2 is-hidden"><input checked={hidePast} className="is-hidden" id="hidePast" type="checkbox" onChange={onChangeHidePast} />過去の営業時間を隠す</label> 
 
                                 <div className="select">
                                     <select name="" id="" value={pref} onChange={onChangePref}>
